--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,3 +1,4 @@
+<!-- Icons -->
 <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/images/favicons/blue/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/images/favicons/blue/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/images/favicons/blue/favicon-16x16.png">
@@ -7,3 +8,6 @@
 <meta name="msapplication-TileColor" content="#ffc40d">
 <meta name="msapplication-config" content="{{ site.baseurl }}/images/favicons/blue/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+
+<!-- Follow-it -->
+<meta name="follow_it-verification-code" content="2n1jEK5saBx0MBYUK3fp"/>
