--- a/_sass/ajustments.scss
+++ b/_sass/ajustments.scss
@@ -2,3 +2,5 @@
 @import "ajustments/titles";
 @import "ajustments/footnotes";
 @import "ajustments/footer";
+@import "ajustments/metadata";
+@import "ajustments/images";
