--- a/_sass/ajustments/images.scss
+++ b/_sass/ajustments/images.scss
@@ -18,6 +18,10 @@
                 max-height: 150px;
             }
 
+            &.very-small-height {
+                max-height: 80px;
+            }
+
             &.small-medium-height {
                 max-height: 300px;
             }
