--- a/_sass/ajustments/images.scss
+++ b/_sass/ajustments/images.scss
@@ -48,3 +48,22 @@
         }
     }
 }
+
+.book-cover {
+    max-height: 310px;
+
+    @media screen and (min-width: 450px) {
+        float: left;
+        margin-right: 15px;
+    }
+
+    @media screen and (max-width: 449px) {
+        margin: auto;
+        display: block;
+    }
+}
+
+.book-title img {
+    height: 22px;
+    vertical-align: sub;
+}
