--- a/_sass/ajustments/images.scss
+++ b/_sass/ajustments/images.scss
@@ -49,6 +49,7 @@
     }
 }
 
+.channel-icon,
 .book-cover {
     max-height: 310px;
 
@@ -63,6 +64,7 @@
     }
 }
 
+.channel-title img,
 .book-title img {
     height: 22px;
     vertical-align: sub;
