--- a/_sass/ajustments/text.scss
+++ b/_sass/ajustments/text.scss
@@ -31,7 +31,7 @@
     }
 }
 
-.chaînes-youtube .page-content h2:not(#toc-toggle),
+.chaines-youtube .page-content h2:not(#toc-toggle),
 .lectures .page-content h3 {
     border-bottom: solid #ad1457 2px;
     margin-bottom: 10px;
